# DummyStudio

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  myAds.h
src/: main.cpp
